--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -25,31 +25,31 @@ ul > li {
   padding: 0.2em;
   line-height: 24px;
 }
-/*
+
 .mka__header-link {
     color: #fff;
     font-family: var(--font-family);
     font-size: min(22px, 14px);
 }
-*/
+
 
 .mka__header-link > p {
   display: flex;
-  /*justify-items: center; */
+  justify-items: center; 
   justify-content: center;
   gap: 5px;
 }
 
 .mka__header-link p > a:hover {
   transition: 0.9s;
-  /* color: var(--color-red); */
+  color: var(--color-red); 
 }
 
-/*
+
 .mka__header-link p > a:active {
   color: var(--color-red); 
 }
-*/
+
 .mka__icons {
   height: 14px;
   width: 19px;
