Building business logic behind the website

--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -26,7 +26,7 @@
   .item2 { grid-area: menu; }
   .item3 { grid-area: main; }
 
-  .mka__content-grid offers {
+  .mka__content-grid-offers {
     display: grid;
     grid-template-areas:
     'header header header header header header'
