--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,8 +1,6 @@
 .mka__container-contact {
     margin-right: auto;
     margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
     height: auto;
   }
   
@@ -19,15 +17,14 @@
     min-height: 1px;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 32px;
   }
   
   .mka__contact-infos-container {
     display: flex;
     justify-content: space-around;
-    margin: 50px 0;
+    padding-top: 50px;
   }
-  
+
   .mka__contact-infos-card {
     text-align: center;
   }
@@ -38,16 +35,26 @@
   }
   
   .mka__contact-infos-circle {
+    display:flex;
+    align-items:center;
+    justify-content:center;
     margin-bottom: 20px;
-    background-color: azure;
-    height: 75px;
-    width: 75px;
+    background-color: #f6f6f6;
+    height: 80px;
+    width: 80px;
     border-radius: 50%;
-    display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
+    cursor:pointer;
+    transition: background-color 0.5s ease;
+  }
+
+  .mka__contact-infos-circle:hover {
+    background-color: var(--color-red);
+    transition: background-color 0.5s ease;
   }
   
   .mka__icon-color {
-    margin-top: 20px;
     color: var(--color-grey);
     height: 30px;
     width: 30px;
