--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -61,6 +61,90 @@
     padding-bottom: 20px;
     color: var(--color-grey);
   }
+
+  .form {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 1em 4em;
+  }
+
+  .form-field {
+    background-color: #fff;
+    box-sizing: border-box;
+    border-radius: 2px;
+    color: #333;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: block;
+    float: none;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    height: 38px;
+    width: 100%;
+    line-height: 1.3;
+  }
+
+  .form-button {
+    background-color: #eee;
+    border: 1px solid #ddd;
+    color: #333;
+    font-size: 1em;
+    padding: 10px 15px;
+    cursor: pointer;
+  }
+
+  .form-button:hover {
+    background-color: red;
+  }
+
+.center {
+  width: 180px;
+  height: 60px;
+  position: relative;
+  grid-column-end: 4;
+  justify-self: end;
+}
+
+
+.btn {
+  margin-top: 25px;
+  width: 180px;
+  height: 60px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #91C9FF;
+  outline: none;
+  transition: 1s ease-in-out;
+}
+
+.btn>svg {
+  margin-top: 25px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: #fff;
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 1s ease-in-out;
+}
+
+.btn:hover {
+  transition: 1s ease-in-out;
+  background: #4F95DA;
+}
+
+.btn:hover svg {
+  stroke-dashoffset: -480;
+}
+
+.btn span {
+  color: white;
+  font-size: 18px;
+  font-weight: 100;
+}
+
   
   textarea {
     background-color: #fff;
@@ -71,7 +155,7 @@
     padding: 6px 10px;
     height: 38px;
     margin-bottom: 20px;
-    width: 160%;
+    width: 30%;
   }
   
   .mka__form-button-align {
