Webkit fill nije podrzan na nekim browserima

--- a/src/components/Jumbotrone/Jumbotrone.css
+++ b/src/components/Jumbotrone/Jumbotrone.css
@@ -4,7 +4,7 @@
     background-attachment: fixed;
     background-position: center center;
     background-image: url("../../assets/Background.jpg");
-    width: -webkit-fill-available;
+    width: 100%;
     display: table;
   }
   
