--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -41,8 +41,12 @@ ul > li {
   gap: 5px;
 }
 
+.mka__header-link p > a {
+  transition: 0.5s;
+}
+
 .mka__header-link p > a:hover {
-  transition: 0.9s;
+  transition: 0.5s;
   color: var(--color-red); 
 }
 
