--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -32,6 +32,10 @@
     margin-top: 30px !important;
   }
 
+  .slick-slide img {
+    width: inherit;
+  }
+
   @media (min-width: 767px) {
     .mka__container-gallery {
       width: 750px;
