--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -41,7 +41,7 @@
 }
 
 .mka__logo-size {
-    width: clamp(264px, 24%, 440px);
+    width: 28%;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
