Pozadina mora biti repeat

--- a/src/components/Financing/Financing.css
+++ b/src/components/Financing/Financing.css
@@ -43,17 +43,13 @@
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     height: 100%;
     background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat-y;
     min-height: 55rem;
   }
   
   .mka__content-financing {
     position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 32px;
+    margin-top: 32px;
   }
   
   .mka__logos-wrapper {
