--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -8,8 +8,7 @@
   
   .mka__wrapper-purchase {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat-y;
     height: 100%;
     overflow: hidden;
   }
