--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -6,8 +6,7 @@
   
   .mka__wrapper-contact {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat-y;
     height: 100%;
     overflow: hidden;
   }
