--- a/src/components/Jumbotrone/Jumbotrone.css
+++ b/src/components/Jumbotrone/Jumbotrone.css
@@ -19,13 +19,14 @@
   .mka__jumbotrone-contact {
     color: #fff;
     max-width: 50%;
-    padding: 60px 0;
+    padding-top: 60px;
+    padding-bottom: 100px;
   }
   
   .mka__jumbotrone-contact > p {
     word-break: break-all;
     line-height: 24px;
-    font-size: 14px;
+    font-size: 15px;
     color: #d2d2d2;
   }
   
@@ -55,7 +56,7 @@
   .mka__jumbotrone-opening-times > p {
     word-break: break-all;
     line-height: 24px;
-    font-size: 14px;
+    font-size: 15px;
     color: #d2d2d2;
   }
 
