--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -1,9 +1,6 @@
 .mka__content-purchase {
     position: relative;
-    min-height: 1px;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 32px;
+    margin-top: 32px;
   }
   
   .mka__wrapper-purchase {
