Pozadina mora biti i contain zbog ralicitih ekrana

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -9,6 +9,7 @@
     background-repeat: repeat-y;
     height: 100%;
     overflow: hidden;
+    background-size: contain;
   }
   
   .mka__content-contact {
