--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -12,6 +12,7 @@
     background-repeat: repeat-y;
     height: 100%;
     overflow: hidden;
+    background-size: contain;
   }
   
   .mka__container-gallery {
