--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -9,10 +9,10 @@
   
   .mka__wrapper-car-offers {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-repeat: repeat-y;
     height: 100%;
     overflow: hidden;
+    background-size: contain;
   }
   
   .mka__container-car-offers {
