--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -8,6 +8,7 @@
     background-repeat: repeat-y;
     height: 100%;
     overflow: hidden;
+    background-size: contain;
   }
   
   .mka__container-purchase {
