--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -5,7 +5,7 @@
   
   .mka__wrapper-purchase {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     height: 100%;
     overflow: hidden;
     background-size: contain;
