--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -6,7 +6,7 @@
   
   .mka__wrapper-contact {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     height: 100%;
     overflow: hidden;
     background-size: contain;
