--- a/src/components/Financing/Financing.css
+++ b/src/components/Financing/Financing.css
@@ -42,7 +42,7 @@
   .mka__wrapper-financing {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     height: 100%;
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     overflow: hidden;
     background-size: contain;
     min-height: 55rem;
