--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -9,7 +9,7 @@
   
   .mka__wrapper-gallery {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     height: 100%;
     overflow: hidden;
     background-size: contain;
