--- a/src/components/HomePageCarList/HomePageCarList.css
+++ b/src/components/HomePageCarList/HomePageCarList.css
@@ -15,7 +15,7 @@
   .mka__wrapper-home-list {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     height: 100%;
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     overflow: hidden;
     background-size: contain;
     min-height: 65rem;
