--- a/src/components/Impression/Impression.css
+++ b/src/components/Impression/Impression.css
@@ -10,7 +10,7 @@
   .mka__wrapper-impression {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     height: 100%;
-    background-repeat: repeat-y;
+    background-repeat: repeat;
     overflow: hidden;
     background-size: contain;
     min-height: 38rem;
