--- a/src/components/Jumbotrone/Jumbotrone.css
+++ b/src/components/Jumbotrone/Jumbotrone.css
@@ -64,7 +64,12 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
-    background-image: url(http://localhost:3000/static/media/Background.cfbea4ef19fe51ae09ee.jpg);
+    background-image: url(http://localhost:3000/images/background_footer.jpg);
+    box-shadow:inset 0 0 0 2000px rgba(0,0,0,0.9);
+  }
+
+  .mka__footer-normal::before {
+    background-color: rgba(0,0,0,0.9);
   }
   
   @media (max-width: 992px) {
