--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -13,7 +13,6 @@
 
 #home-img-id {
     background-image: url(http://mkautomobile.at/wp-content/uploads/2021/04/dark-min.jpg?id=492);
-    background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -52,22 +51,22 @@
 
 .mka__car-img-div {
     text-align: center;
-    padding: 10rem; 
-    padding-top: 2rem;
-    padding-bottom: 0;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
+    padding-top:2em;
 }
 
 #mercedes-min {
-    width: clamp(300px, 38%, 40%);
+    width: clamp(300px, 100%, 650px);
     position: relative;
+    z-index: 0;
+    transform: translate(-10%, -5%);
 }
 
 #bmw-min {
-    width: clamp(300px, 38%, 40%);
-    margin-right: -8rem;
-   position: relative;
+    width: clamp(300px, 100%, 650px);
+    position: relative;
+    z-index: 1;
+    transform: translateX(10%);
 }
 
 @media (max-width: 479px) {
