--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,17 +6,17 @@
     padding-left: 2rem;
     padding-bottom: 2rem;
   }
-  
+
   .mka__navbar-links {
     flex: 1;
   }
-  
+
   .mka__navbar-links_container {
     display: flex;
     flex-direction: row;
     justify-content: center;
   }
-  
+
   .mka__navbar-links_container p {
     color: #fff;
     font-size: 14px;
@@ -27,28 +27,28 @@
     padding: 0 0.5rem;
     cursor: pointer;
   }
-  
+
   .mka__navbar-links_container p > a:link {
     color: #fff;
     transition: 0.5s;
   }
-  
+
   .mka__navbar-links_container p > a:hover {
     transition: 0.5s;
     color: #db2d2e;
   }
-  
+
   .mka__navbar-links_container p > i:hover {
     transition: 0.5s;
     color: #db2d2e;
   }
-  
+
   .mka__navbar-links_container p > a.active {
     color: #db2d2e;
   }
-  
+
   /* Hamburger menu */
-  
+
   .mka__navbar-menu_container-links {
     color: #fff;
     font-size: 14px;
@@ -56,20 +56,20 @@
     text-transform: uppercase;
     font-weight: 400;
     font-family: var(--font-family);
-    padding: 0 1.5rem;
+    padding: 1em;
     cursor: pointer;
     width: 100%;
   }
-  
+
   .mka__navbar-menu_container-links p > a:hover {
     transition: 0.5s;
     color: #db2d2e;
   }
-  
+
   .mka__navbar-menu_container-links p > a.active {
     color: #db2d2e;
   }
-  
+
   /* Search */
   .mka__search-div {
     background: #0e0e0ed1;
@@ -86,7 +86,7 @@
     right: 0;
     top: 9rem;
   }
-  
+
   .mka__search-input {
     border: 1px solid #fff;
     background: #0f1215;
@@ -94,7 +94,7 @@
     width: 300px;
     margin-bottom: 0 !important;
   }
-  
+
   .mka__search-input:focus {
     border-color: #db2d2e;
   }
@@ -107,7 +107,7 @@
   .mka__search_column svg {
     transition: 0.5s;
   }
-  
+
   .io-close {
     color: #fff;
     width: 21px;
@@ -115,12 +115,12 @@
     margin-top: 20px;
     padding-right: 5px;
   }
-  
+
   .io-close:hover {
     transition: 0.5s;
     color: #db2d2e;
   }
-  
+
   .fa-search {
     position: absolute;
     right: 26px;
@@ -129,7 +129,7 @@
     cursor: pointer;
     font-size: 15px;
   }
-  
+
   .fa-search:hover {
     transition: 0.5s;
     color: #db2d2e;
@@ -146,17 +146,17 @@
       display: none;
     }
   }
-  
+
   @media (max-width: 992px) {
     .mka__navbar-links_container {
       display: none;
     }
-  
+
     .mka___hamburger-menu {
       float: right;
       margin-top: -17px;
     }
-  
+
     .mka__navbar-menu_container {
       background-color: #0f1215;
       width: 100%;
@@ -164,7 +164,7 @@
       border-radius: 5px;
       position: relative;
     }
-  
+
     .mka__navbar-menu-margins {
       margin-left: 0;
       margin-right: auto;
@@ -175,20 +175,23 @@
       z-index: 99;
     }
   }
-  
+
+  .mka__navbar-menu_container-links p {
+    margin:1em;
+  }
+
   @media (min-width: 1200px) {
     .mka__navbar-links_container p {
       padding: 0 0.8rem;
     }
-  
+
     .mka__search-div {
       left: 24rem;
     }
   }
-  
+
   @media (max-width: 1200px) {
     .mka__search-div {
       left: 20rem;
     }
   }
-  
