--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -44,7 +44,7 @@
     position: absolute;
     margin-left: auto;
     margin-right: auto;
-    left: 0;
+    left: 2em;
     right: 0;
     text-align: center;
 }
@@ -91,6 +91,12 @@
     .mka__title-wrapper h1 {
         font-size: 30px;
         line-height: 38px;
+    }
+    .mka__logo-size {
+        width: 50%;
+    }
+    .header-img-div {
+      height: 350px;
     }
 }
 
