--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,86 @@ a {
     margin-left: auto;
   }
   
+  .form {
+    margin-top: 5em;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 1em 4em; 
+  }
+
+  .form-field {
+    background-color: #fff;
+    box-sizing: border-box;
+    border-radius: 2px;
+    color: #333;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: block;
+    float: none;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    height: 38px;
+    width: 100%;
+    line-height: 1.3;
+  }
+
+  .form-button {
+    background-color: #eee;
+    border: 1px solid #ddd;
+    color: #333;
+    font-size: 1em;
+    padding: 10px 15px;
+    cursor: pointer;
+  }
+
+  .form-button:hover {
+    background-color: red;
+  }
+
+.center {
+  width: 180px;
+  height: 60px;
+  position: relative;
+  grid-column-end: 4;
+  justify-self: end;
+}
+
+.btn {
+  margin-top: 25px;
+  width: 180px;
+  height: 60px;
+  cursor: pointer;
+  background: transparent;
+  border: 1px solid #FFF;
+  outline: none;
+  transition: 0.5s ease-in-out;
+}
+
+.btn>svg {
+  margin-top: 25px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  fill: none;
+  stroke: var(--color-red);
+  stroke-dasharray: 150 480;
+  stroke-dashoffset: 150;
+  transition: 0.5s ease-in-out;
+}
+
+.btn:hover {
+  transition: 0.5s ease-in-out;
+  background: transparent;
+  border-color: var(--color-red);
+}
+
+.btn span {
+  color: white;
+  font-size: 18px;
+  font-weight: 400;
+}
+
   @media (min-width: 992px) {
     .mka__container {
       width: 970px;
