--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -21,6 +21,9 @@
       height: 5rem;
       margin-top: 40px;
       margin-bottom: 75px;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
    }
 
   .item2 { grid-area: menu; }
