--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -8,9 +8,21 @@
 
 .fa-search-car-offers {
     position: absolute;
-    top: 16.2rem;
+    top: 21.7rem;
     left: 17.5rem;
     color: #db2d2e;
     cursor: pointer;
     font-size: 15px;
+  }
+
+  .dropbtn {
+    background-color: rgb(19, 19, 19);
+    color: var(--color-grey);
+    text-align: start;
+    padding-left: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    border: 1px solid #fff ;
+    min-width: 18rem;
+    height: 2.2rem;
   }
