--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -18,13 +18,32 @@
   .item1 { 
     grid-area: header;
       border: 1px solid white;
-      height: 5rem;
+      height: auto;
       margin-top: 40px;
       margin-bottom: 75px;
       display: flex;
       align-items: center;
       justify-content: space-around;
+      position: relative;
    }
+
+   @media (max-width: 1200px) {
+    .item1 {
+      flex-direction: column;
+    }
+  }
+
+   .mka-responsive-item {
+    float: right;
+    display: flex;
+    border: none;
+   }
+
+   @media (max-width: 590px) {
+    .mka-responsive-item {
+      flex-direction: column;
+    }
+  }
 
   .item2 { grid-area: menu; }
   .item3 { grid-area: main; }
