--- a/src/components/CarOffers/CarSlider.css
+++ b/src/components/CarOffers/CarSlider.css
@@ -65,7 +65,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    text-align: left;
+    float: left;
 }
 
 .mka__range-text {
