--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -8,12 +8,78 @@
   margin-right: 20px;
 }
 
-.card_image {
+.card_image-container {
   position: relative;
-  overflow: hidden;
-  display: inline-block;
   width: 100%;
-  height: 12rem;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: var(--color-red);
+  opacity: .8;
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .5s ease;
+}
+
+.card_image-container:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+.overlay ul {
+  left: 0;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    z-index: 99;
+    padding: 0;
+    margin: 0;
+}
+
+.overlay ul li {
+  display: inline-block;
+  margin: 0 3px;
+}
+
+.overlay ul li a {
+  background: 0 0;
+  border: 2px solid #fff;
+  color: #fff;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  text-align: center;
+  display: inline-block;
+  border-radius: 50%;
+}
+
+.overlay ul li a i{
+  position: initial;
+  margin-left: 5px;
+}
+
+.overlay ul li a:hover {
+  background: #fff;
+}
+
+.overlay ul li a:hover > i {
+  color: var(--color-red);
 }
 
 .card_list {
