--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,29 +1,11 @@
   .mka__wrapper-gallery {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     background-repeat: repeat;
-    height: 100%;
+    height: 100vh;
+    padding-top: 3rem;
+    position: relative;
     overflow: hidden;
-    background-size: contain;
-  }
-
-  .slick-prev, .slick-next {
-    display: flex !important;
-    align-items: center !important;
-    justify-content: center !important;
-  }
-
-  .slick-slide img {
-    width: inherit;
-  }
-
-  .slick-list {
-    height: auto !important;
-  }
-
-  .slick-dots {
-    position: relative !important;
-    margin-top: 30px !important;
-    bottom: 0px !important;
+    background-size: cover;
   }
 
   @media (min-width: 767px) {
