--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
     --color-red: #cf2e2e;
 
     --font-open-sans: Open Sans, Arial, Helvetica, sans-serif;
+    --swiper-pagination-bullet-size: 12px !important
 }
 
 h1 {
