--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,16 @@ a {
   background-color: red !important;
 }
 
-
+@media (max-width: 767px) {
+  .form {
+    display: flex;
+    flex-direction: column;
+  }
+  .btn {
+    width: 140px;
+    height: 50px;
+  }
+}
 
   @media (min-width: 992px) {
     .mka__container {
