Ostalo mi logiku za storovanje inputa doraditi i pomjeriti strelice unaprijed na galeriji

--- a/src/components/Financing/Financing.css
+++ b/src/components/Financing/Financing.css
@@ -36,7 +36,7 @@
     height: 100%;
     background-repeat: repeat;
     overflow: hidden;
-    background-size: contain;
+    background-size: cover;
     min-height: 55rem;
   }
   
