--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,39 +1,9 @@
   .mka__wrapper-gallery {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     background-repeat: repeat;
-    height: 100vh;
     padding-top: 3rem;
-    position: relative;
+    padding-bottom: 5rem;
+    position: initial;
     overflow: hidden;
     background-size: cover;
-  }
-
-  @media (min-width: 767px) {
-    .mka__container-gallery {
-      width: 750px;
-    }
-    .mka__content-gallery {
-      width: 100%;
-      float: left;
-    }
-  }
-
-  @media (min-width: 992px) {
-    .mka__container-gallery {
-      width: 970px;
-    }
-    .mka__content-gallery {
-      width: 100%;
-      float: left;
-    }
-  }
-
-  @media (min-width: 1200px) {
-    .mka__container-gallery {
-      width: 1170px;
-    }
-    .mka__content-gallery {
-      width: 100%;
-      float: left;
-    }
   }
