--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ a {
 
 #header-img-id {
     background-image: url(http://mkautomobile.at/wp-content/uploads/2021/04/dark-min.jpg?id=492);
-    background-size: cover;
+    background-size: auto;
     background-repeat: no-repeat;
 }
 
@@ -93,6 +93,27 @@ a {
     height: 38px;
     width: 100%;
     line-height: 1.3;
+    margin-bottom: 15px;
+    margin-top: 10px;
+  }
+
+  select {
+    background-color: #fff;
+    box-sizing: border-box;
+    border-radius: 2px;
+    color: #333;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    display: block;
+    float: none;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    padding: 6px 10px;
+    height: 38px;
+    width: 100%;
+    line-height: 1.3;
+    margin-bottom: 15px;
+    margin-top: 10px;
   }
 
   .form-button {
@@ -151,6 +172,11 @@ a {
   font-weight: 400;
 }
 
+.end {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .swiper-pagination-bullet-active {
   background-color: red !important;
 }
@@ -168,7 +194,6 @@ a {
 .mka__input:focus {
   border-color: #db2d2e !important;
 }
-
 
 .longer {
   width: 37.5rem;
