--- a/src/components/CarPurchase/CarPurchase.css
+++ b/src/components/CarPurchase/CarPurchase.css
@@ -1,18 +1,18 @@
 .mka__content-purchase {
     position: relative;
-    margin-top: 32px;
+    padding-top: 32px;
   }
   
   .mka__wrapper-purchase {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     background-repeat: repeat;
-    height: auto;
-    overflow: hidden;
-    background-size: contain;
+    min-height: 80rem;
+    background-size: cover;
+    padding-bottom: 30px;
   } 
   
-  .mka__content-purchase > h2 {
-    padding-bottom: 10px;
+  .mka__content-purchase > h4 {
+    padding: 15px 0;
   }
   
   .mka__content-purchase > p {
@@ -36,6 +36,7 @@
     display: list-item;
     padding: 0;
   }
+
   
   @media (min-width: 767px) {
     .mka__content-purchase {
