Sredio slajdere i stavio padding na datenschutz.

--- a/src/components/Copyright/Copyright.css
+++ b/src/components/Copyright/Copyright.css
@@ -13,6 +13,7 @@
     padding-left: 15px;
     padding-right: 15px;
     height: auto;
+    padding-top: 30px;
   }
   
   .mka__content-copyright > p {
