--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -1,4 +1,4 @@
-.swiper {
+.mka__home-slider {
     aspect-ratio: 1.5 / 1;
     margin-left: auto;
     margin-right: auto;
@@ -18,30 +18,20 @@
     font-family: 'Rubik', sans-serif !important;
   }
 
-.swiper-button-prev {
-    left: 60px !important;
-    width: 44px !important; 
-    height: 44px !important;
-    background-color: #fff !important;
-    transition: 300ms ease-out;
-    opacity: 0;
-    transform: translate(0, 0);
-  }
-
+.swiper-button-prev,
 .swiper-button-next {
-    right: 60px !important;
+    top: 45% !important;
     width: 44px !important; 
     height: 44px !important;
     background-color: #fff !important;
     transition: 300ms ease-out;
     opacity: 0;
-    transform: translate(0, 0);
+    transform: translate(0, 0) !important;
+    outline: 0;
+    transition: background-color 0.2s ease, color 0.2s ease;
   }
 
-.swiper-button-prev::after {
-    content: "" !important;
-  }
-
+.swiper-button-prev::after,
 .swiper-button-next:after {
     content: "" !important;
   }
@@ -49,15 +39,32 @@
 .swiper:hover .swiper-button-prev {
     opacity: 1;
     transform: translateX(-190%);
-    overflow: visible;
-
   }
 
 .swiper:hover .swiper-button-next {
     opacity: 1;
     transform: translateX(190%);
-    overflow: visible;
   }
+
+.swiper-button-prev:after {
+    position: relative !important;
+    left: -1px !important;
+ }
+
+.swiper-button-next:after {
+    position: relative !important;
+    left: 1px !important;
+ }
+
+.swiper-button-prev, .swiper-container-rtl .swiper-button-next {
+  left: 10px !important;
+  right: auto !important;
+}
+
+.swiper-button-next, .swiper-container-rtl .swiper-button-prev {
+  right: -5px !important;
+  left: auto !important;
+}
 
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
