Fetchovao i prikazao posljednja auta u arrayu

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card_wrapper {
   text-align: center;
-  height: auto;
+  height: 16,375rem;
   background: #00000033;
   color: #363636;
   z-index: 9;
