--- a/src/components/CarOffers/CarOffers.css
+++ b/src/components/CarOffers/CarOffers.css
@@ -12,7 +12,7 @@
     background-repeat: repeat;
     height: 100%;
     overflow: hidden;
-    background-size: contain;
+    background-size: auto;
   }
   
   .item1 { 
@@ -27,14 +27,18 @@
       position: relative;
    }
 
+   .mka-sorting-div__offers {
+    display: flex;
+   }
+
    @media (max-width: 1200px) {
     .item1 {
       flex-direction: column;
+      padding: 20px;
     }
   }
 
    .mka-responsive-item {
-    float: right;
     display: flex;
     border: none;
    }
@@ -45,20 +49,54 @@
     }
   }
 
-  .item2 { grid-area: menu; }
-  .item3 { grid-area: main; }
+  .item2 { 
+    grid-area: menu;
+    width: 30vh;
+   }
 
   .mka__content-grid-offers {
     display: grid;
     grid-template-areas:
     'header header header header header header'
-    'menu menu main main main main'
-    'menu menu main main main main';
-     gap: 10px;
+    'menu menu menu main main main'
+    'menu menu menu main main main';
+     gap: 30px;
   }
 
   .mka__side-bar-divider {
     margin-bottom: 4rem;
+  }
+
+  .mka__side-bar-divider h6 {
+    text-align: left;
+  }
+
+  .item3 { 
+    grid-area: main;
+    max-width: 100%; 
+  }
+
+  .mka__sidebar-divider {
+    margin-left: 0;
+    width: 8%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    height: 2px;
+    background-color: var(--color-red)
+  }
+
+  .mka__sidebar-detailed-search h6 {
+    text-align: left;
+  }
+
+  @media (max-width: 767px) {
+    .mka__content-grid-offers {
+      display: flex;
+      flex-direction: column;
+    }
+    .item2 { 
+      width: auto;
+     }
   }
 
   @media (min-width: 767px) {
