--- a/src/components/CarOffers/CarsItem.css
+++ b/src/components/CarOffers/CarsItem.css
@@ -1,16 +1,17 @@
 .cars-item_wrapper {
     text-align: center;
-    height: 437.5px;
+    height: auto;
     z-index: 9;
-    width: 260px;
+    width: 100%;
   }
   
-  .cars-item_image {
+  .cars-item_image-container {
     position: relative;
-    overflow: hidden;
-    display: inline-block;
     width: 100%;
-    height: 12rem;
+  }
+
+  .cars-item_image {
+    width: inherit;
   }
   
   .cars-item_list {
@@ -133,21 +134,3 @@
     color: #fff;
   }
   
-  @media (max-width: 1200px) {
-    .cars-item_wrapper {
-      width: 210px;
-    }
-  }
-  
-  @media (max-width: 992px) {
-    .cars-item_wrapper {
-      width: 420px;
-    }
-  }
-  
-  @media (max-width: 767px) {
-    .cars-item_wrapper {
-      width: 700px;
-      height: 790px;
-    }
-  }
