--- a/src/components/CarOffers/Search.css
+++ b/src/components/CarOffers/Search.css
@@ -2,7 +2,7 @@
  * Main wrapper
  */
  .select-search {
-  width: 300px;
+  width: auto;
   position: relative;
   font-family: var(--font-family);
   box-sizing: border-box;
@@ -40,7 +40,7 @@
   height: 45px;
   width: 100%;
   padding: 0 40px 0 16px;
-  background: #0c0d0f;
+  background: red;
   box-shadow: 0 0.0625rem 0.125rem rgba(0, 0, 0, 0.15);
   border: 1px solid white;
   outline: none;
