--- a/src/components/CarOffers/CarsItem.css
+++ b/src/components/CarOffers/CarsItem.css
@@ -134,3 +134,63 @@
     color: #fff;
   }
   
+  .cars-item_wrapper:hover .overlay {
+    bottom: 0;
+    height: 100%;
+  }
+
+  .cars-item_wrapper:hover .cars-item_separator::before {
+    background: red;
+    width: 50px;
+    transition: width 0.8s ease, background-color 0.8s ease;
+  }
+  
+  .cars-item_wrapper:hover .cars-item_separator::after {
+    background: red;
+    width: 30px;
+    transition: width 0.8s ease, background-color 0.8s ease;
+  }
+
+  .overlay-bottom-slide {
+    position: absolute;     
+    opacity:0;
+    bottom:0;
+    right:0;
+    top:100%;
+    height:0;
+    width:100%;
+    overflow: hidden;
+    transition: .5s ease;
+    background-color: black;
+    border-bottom: 1px solid white;
+  }
+  
+  .cars-item_wrapper:hover .cars-item_image {
+    opacity: 0.7;
+  }
+  
+  .cars-item_wrapper:hover .overlay-bottom-slide {
+    top: 80%;
+    height: 20%;
+    opacity:0.5;
+  }
+
+  .overlay-bottom-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 8px;
+    gap: 5px;
+  }
+
+  .overlay-bottom-container i {
+    color: #fff;
+  }
+
+  .overlay-bottom-flex {
+    display: flex;
+  }
+
+  .cars-item_car-title:hover h6 {
+    color: #363636;
+    transition: color 0.8s ease;
+  }
